[gd_scene load_steps=8 format=3 uid="uid://byujvy4as2hnh"]

[ext_resource type="Script" path="res://Scenes/UI/PauseScreen/PauseScreen.gd" id="1_24wsa"]
[ext_resource type="Theme" uid="uid://c3gbnda0qarvm" path="res://Theme.tres" id="2_3h1gt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upijr"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0.560784)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Animation" id="Animation_vd0cw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2peyx"]
resource_name = "close"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 0.129408),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1500, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pgkcm"]
resource_name = "open"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(0.129408, 1),
"update": 0,
"values": [Vector2(-1500, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3dulo"]
_data = {
"RESET": SubResource("Animation_vd0cw"),
"close": SubResource("Animation_2peyx"),
"open": SubResource("Animation_pgkcm")
}

[node name="PauseScreen" type="CenterContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3072.0
offset_bottom = 6144.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_24wsa")

[node name="Control" type="Panel" parent="."]
custom_minimum_size = Vector2(700, 1000)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_upijr")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 44.0
offset_right = -58.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3h1gt")
text = "Pause"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Control/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_3h1gt")
text = "continue"

[node name="RestartButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3h1gt")
text = "restart"

[node name="MainMenuButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3h1gt")
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3dulo")
}

[connection signal="pressed" from="Control/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
